# screen-readers-mcp

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  ROADMAP.md
.github/workflows/: addon-artifact.yml  checklist.yml  ci.yml  comment-pr-artifact.yml  release-nvda-bridge.yml  release-server.yml
bridge/: sconstruct  sync_shared.py
bridgeAddon/: README.tpl.md  buildVars.py  pyproject.toml  sync_shared.py
bridgeAddon/addon/globalPlugins/nvdaMcpBridge/: __init__.py  plugin.py  wiring.py
bridgeAddon/addon/globalPlugins/nvdaMcpBridge/adapters/: bridge_server.py  build_listener.py  file_transcript.py  ini_bridge_config.py  json_lines_channel.py  named_pipe_listener.py  named_pipe_transport.py  nvda_adapter_factory.py  nvda_announcer.py  nvda_log.py  nvda_log_capture.py  nvda_main_thread.py  nvda_session_signals.py  nvda_silent_speech_source.py  nvda_synth_swapper.py  simple_event_bus.py  socket_transport.py  tcp_listener.py  text_config_file.py  text_file_writer.py
bridgeAddon/addon/globalPlugins/nvdaMcpBridge/adapters/ports/: file_writer.py  listener.py  transport.py
bridgeAddon/addon/globalPlugins/nvdaMcpBridge/domain/controllers/: __init__.py  session.py  teardown_reason.py
bridgeAddon/addon/globalPlugins/nvdaMcpBridge/domain/controllers/commands/: __init__.py  announce.py  bye.py  command_handler.py  echo.py  get_braille.py  get_last_speech.py  get_next_speech_index.py  get_speech.py  hello.py  not_implemented.py  ping.py  press_gesture.py  registry.py  session_context.py  wait_for_speech.py  wait_for_speech_to_finish.py
bridgeAddon/addon/globalPlugins/nvdaMcpBridge/domain/ports/: __init__.py  adapter_factory.py  announcer.py  braille_source.py  bridge_config.py  clock.py  event_bus.py  gesture_sender.py  log_capture.py  message_channel.py  session_signals.py  speech_source.py  synth_swapper.py  transcript.py  transport.py
bridgeAddon/addon/globalPlugins/nvdaMcpBridge/views/: bridge_dialog.py
bridgeAddon/tests/fakes/: adapter_factory.py  announcer.py  braille_source.py  command_handler.py  event_bus.py  file_writer.py  gesture_sender.py  listener.py  log_capture.py  loopback_transport.py  message_channel.py  script.py  session_signals.py  speech_source.py  synth_swapper.py  transcript.py  transport.py
bridgeAddon/tests/integration/: test_live_nvda_e2e.py  test_named_pipe_session_roundtrip.py  test_socket_session_roundtrip.py  test_wire_session_roundtrip.py
bridgeAddon/tests/support/: __init__.py  context.py  session.py
bridgeAddon/tests/unit/: test_wiring.py
bridgeAddon/tests/unit/adapters/: test_bridge_server.py  test_file_transcript.py  test_ini_bridge_config.py  test_json_lines_channel.py
bridgeAddon/tests/unit/domain/controllers/: test_session.py
bridgeAddon/tests/unit/domain/controllers/commands/: test_announce.py  test_bye.py  test_echo.py  test_get_braille.py  test_get_last_speech.py  test_get_next_speech_index.py  test_get_speech.py  test_hello.py  test_not_implemented.py  test_ping.py  test_press_gesture.py  test_registry.py  test_session_context.py  test_wait_for_speech.py  test_wait_for_speech_to_finish.py
bridges/nvda/: README.md  README.tpl.md
mcpServer/: README.md  pyproject.toml
mcpServer/src/nvda_mcp/: __init__.py
mcpServer/tests/: test_smoke.py
scripts/: live_test.py
server/: .gitignore  README.md  go.mod  go.sum
server/adapters/: stderr_log.go  system_clock.go
server/adapters/bridge/: endpoint.go  endpoint_test.go  handshake.go  handshake_test.go  json_lines_client.go  json_lines_client_test.go  pipe_transport_other.go  pipe_transport_windows.go  tcp_transport.go
server/adapters/discovery/: pipe_directory_other.go  pipe_directory_windows.go  pipe_probe.go  (+1 more)
server/config/: defaults.json  loader.go  loader_test.go
server/fakes/: braille_reader.go  clock.go  config_accessor.go  connection_control.go  endpoint_probe.go  endpoint_source.go  errors.go  focus_inspector.go  gesture_sender.go  log.go  pipe_directory.go  session_dialer.go  session_lifecycle.go  speech_reader.go  state_inspector.go  tool_publisher.go  transport.go
server/testsupport/: bridge.go  connection.go  mcp.go  reader.go  tools.go
server/version/: version.go
server/wiring/: wiring.go
shared/: README.md  pyproject.toml
shared/nvda_mcp_wire/: __init__.py  protocol.py  schema.py
shared/tests/: test_protocol.py
shared/tests/unit/: test_protocol.py  test_schema.py
specs/: 0001-agent-driven-nvda-over-mcp.md  0002-bridge-message-channel.md  0003-bridge-transcript.md  0004-bridge-session-controller.md  0005-multi-reader-direction.md  0007-bridge-nvda-edge.md  0008-transparent-silent-capture.md  0009-nvda-log-capture.md  0010-named-pipe-transport.md  0011-bridge-control-ui.md  0012-packaging-and-release.md  0013-mcp-server.md
(+78 files in other folders)
