# Bridge (NVDA addon) tooling config. The addon itself is built with scons
# (see sconstruct); this file only configures the linters/type-checker.

[project]
name = "nvda-mcp-bridge"
version = "0.0.0"
# NVDA 2026.1 embeds CPython 3.13; matches the pyright pythonVersion below and
# silences uv's "No requires-python value found" warning.
requires-python = ">=3.13"
dependencies = []

[tool.uv]
# Built with scons into a .nvda-addon, never pip-installed, so uv manages the
# dev env but does not try to build/install this project itself.
package = false

[tool.pytest.ini_options]
# The bridge domain is stdlib-only and unit-tested headlessly under desktop
# Python 3.13. tests/conftest.py syncs the shared wire module in and puts the
# package on sys.path (no NVDA, no stubs). Only the pure domain is exercised.
testpaths = ["tests"]

[tool.ruff]
line-length = 110

builtins = ["_", "ngettext", "pgettext", "npgettext"]
include = ["*.py", "sconstruct"]
exclude = [".git", "__pycache__"]

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
ignore = ["W191"]

[tool.ruff.lint.per-file-ignores]
"sconstruct" = ["F821"]

[tool.pyright]
pythonVersion = "3.13"       # NVDA 2026.1 embeds CPython 3.13
pythonPlatform = "Windows"
typeCheckingMode = "strict"

# The PURE domain (and the pure adapters, and the tests) are strict-checked.
# There is NO NVDA source dependency and NO vendored stubs: the side-effecting
# edge that imports NVDA is exempted via `ignore` below, because the domain it
# serves is fully checked and the edge is validated by live-NVDA integration
# tests (milestone 6). See AGENTS.md "Internal architecture — ports & adapters".
include = ["addon/globalPlugins/nvdaMcpBridge", "buildVars.py", "tests"]
exclude = ["sconstruct", ".git", "__pycache__"]

# The NVDA-importing edge: unresolved NVDA imports here raise nothing. Keep
# these files thin (glue only); real logic belongs in the checked domain. The
# adapters/nvda_*.py glob covers every NVDA-importing adapter (the sources, the
# announcer, the session-signals beeps, and the nvda_main_thread wx helper).
ignore = [
    "addon/globalPlugins/nvdaMcpBridge/plugin.py",
    "addon/globalPlugins/nvdaMcpBridge/adapters/nvda_*.py",
]

# So `import nvdaMcpBridge.*` (the package) and `import fakes` (test helpers)
# resolve without an installed package or an NVDA checkout.
extraPaths = ["./addon/globalPlugins", "./tests"]

analyzeUnannotatedFunctions = true
reportMissingModuleSource = false
