[project]
name = "nvda-mcp"
version = "0.1.0"
description = "MCP server that drives NVDA (via the nvdaMcpBridge addon) to functionally test NVDA addons."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
authors = [{ name = "Marlon Brandao de Sousa", email = "marlon.bsousa@gmail.com" }]
dependencies = [
    "mcp>=1.2",
    "nvda-mcp-wire",
]

[project.scripts]
nvda-mcp = "nvda_mcp:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pyright>=1.1.390",
]

[tool.uv.sources]
# Dev/source workflow: consume the shared wire package straight from the repo.
# The packaged (PyInstaller) build resolves it from the committed uv.lock.
nvda-mcp-wire = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nvda_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
ignore = ["W191"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests"]
