[project]
name = "nvda-mcp-wire"
version = "0.1.0"
description = "Shared, stdlib-only JSON-lines wire protocol for nvda-mcp (bridge <-> server)."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
authors = [{ name = "Marlon Brandao de Sousa", email = "marlon.bsousa@gmail.com" }]
# INTENTIONALLY ZERO RUNTIME DEPENDENCIES. This package is copied verbatim into
# NVDA's embedded interpreter; it must never grow a third-party import.
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "pyright>=1.1.390"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nvda_mcp_wire"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
ignore = ["W191"]  # tabs, per the NVDA/addon house style

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["nvda_mcp_wire", "tests"]
